--- a/style.css
+++ b/style.css
@@ -31,12 +31,24 @@ article{
 }
 
 #imagem-1{
-    width: 35vh;
+    width: 37vh;
     height: 40vh;
-    border-bottom-left-radius: 20px;
-    border-top-left-radius: 20px;
+    border-radius: 20px;
 }
 
 h1{
   margin: 22px;
+  font-size: clamp(1.7rem, 6vw, 2.5rem);
+}
+
+@media screen and (max-width: 848px){
+  article{
+    width: 38vh;
+    height: 74vh;
+    flex-direction: column;
+  }
+
+  #imagem-1{
+    width: 38vh;
+  }
 }
